<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    style="SCREEN"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/TEXT"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_account"
        style="@style/TEXT"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:background="@drawable/object"
        android:ems="10"
        android:drawablePadding="8sp"
        android:padding="8sp"
        android:hint="@string/username"
        style="@style/TEXT"
        android:drawableLeft="@drawable/baseline_person_24"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.084" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/email"
        style="TEXT"
        android:drawablePadding="8sp"
        android:padding="8sp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:background="@drawable/object"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:ems="10"
        style="TEXT"
        android:hint="@string/password"
        android:drawablePadding="8sp"
        android:padding="8sp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/baseline_password_24"
        android:background="@drawable/object"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintVertical_bias="0.082" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="216dp"
        android:layout_height="47dp"
        android:ems="10"
        style="TEXT"
        android:hint="@string/confirm_password"
        android:drawablePadding="8sp"
        android:padding="8sp"
        android:drawableLeft="@drawable/baseline_password_24"
        android:background="@drawable/object"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/button"
        style="@style/BUTTON"
        android:layout_width="216dp"
        android:layout_height="55dp"
        android:layout_marginBottom="140dp"
        android:text="@string/sign_up_2"
        android:textAllCaps="false"
        app:cornerRadius="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.519" />
</androidx.constraintlayout.widget.ConstraintLayout>